--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 18 00:23:41 CET 2024
-sdk.dir=E\:\\Android Studio
+#Wed Mar 20 16:45:14 CET 2024
+sdk.dir=C\:\\Users\\sonwerik\\AppData\\Local\\Android\\Sdk
