--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,37 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+        xmlns:tools="http://schemas.android.com/tools"
+        package="com.example.horacat">
+
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+
     <application
-        android:allowBackup="true"
-        android:dataExtractionRules="@xml/data_extraction_rules"
-        android:fullBackupContent="@xml/backup_rules"
-        android:icon="@drawable/hermes"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/hermes"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.Horacat"
-        tools:targetApi="31">
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
+            android:allowBackup="true"
+            android:dataExtractionRules="@xml/data_extraction_rules"
+            android:fullBackupContent="@xml/backup_rules"
+            android:icon="@drawable/hermes"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Horacat">
+            android:roundIcon="@drawable/hermes"
+            android:supportsRtl="true"
+            android:theme="@style/Theme.Horacat"
+            tools:targetApi="31">
+
+        <activity
+                android:name=".MainActivity"
+                android:exported="true"
+                android:label="@string/app_name"
+                android:theme="@style/Theme.Horacat">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver
-            android:name="com.example.horacat.HoracatWidget"
-            android:label="Horacat Widget"
-            android:exported="true">
+                android:name=".HoracatWidget"
+                android:label="Horacat Widget"
+                android:exported="true">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
             <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/widget_info" />
+                    android:name="android.appwidget.provider"
+                    android:resource="@xml/widget_info" />
         </receiver>
     </application>
 </manifest>
