He afegit un rellotge analògic i un digital (només a la app), però aquest últim está comentat, és a dir, que no es mostra a l'app, perquè és una opció que vull afegir en un futur amb altres funcionalitats.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,9 +7,9 @@
             android:allowBackup="true"
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
-            android:icon="@drawable/hermes"
+            android:icon="@drawable/icon"
             android:label="@string/app_name"
-            android:roundIcon="@drawable/hermes"
+            android:roundIcon="@drawable/icon"
             android:supportsRtl="true"
             android:theme="@style/Theme.Horacat"
             tools:targetApi="31">
