He tret els segons perque eren bastant molestos. Al principi he estat arreglant bugs i errors d'aquests, pero els he acabat elimininant. Mantenint, pero els rellotges digital i analogic.

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 21 09:06:32 CET 2024
-sdk.dir=E\:\\Android Studio
+#Thu Apr 18 18:33:19 CEST 2024
+sdk.dir=/home/sonwerik/Android/Sdk
