I think and wish I've optimized getCurrentTimeInCatalan() method on the return algorithm.

--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 18 18:33:19 CEST 2024
-sdk.dir=/home/sonwerik/Android/Sdk
+#Thu Feb 06 12:30:18 CET 2025
+sdk.dir=/home/43572893z/Android/Sdk
